--- a/Problem 3/problem3.html
+++ b/Problem 3/problem3.html
@@ -8,12 +8,12 @@
 <body>
     <form action="signup">
         <label for="username">Username</label>
-        <input type="text" name="username" id="username">
+        <input type="text" name="username" id="username" placeholder="Ex: John Doe" required>
 
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password">
+        <label for="password" placeholder="Password" >Password</label>
+        <input type="password" name="password" id="password" required>
 
-        
+        <button type="submit">Signup!</button>
     </form>
 </body>
 </html>
